# AdventOfCode_2025

./: aoc_class.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  expected_results.json  main.py  pyproject.toml  template.py  test_advent_of_code.py
